Fix UX to fit on mobile properly

--- a/src/pages/projects/functionlrl/FunctionLRL.css
+++ b/src/pages/projects/functionlrl/FunctionLRL.css
@@ -1,19 +1,51 @@
 .project-image {
     width: 250px;
     height: 500px;
-    margin: 15px;
+    margin: 30px 0px;
 }
 
 
 
-#project-videos {
+#project-videos-desktop {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
 
-#project-images {
+#project-videos-mobile {
+    display: none;
+}
+
+#project-images-desktop {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+}
+
+#project-images-mobile {
+    display: none;
+}
+
+@media screen and (max-width: 600px) {
+    #project-videos-desktop {
+        display: none;
+    }
+
+    #project-videos-mobile {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #project-images-desktop {
+        display: none;
+    }
+
+    #project-images-mobile {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
 }
